<resources>
    <string name="app_name">Coin</string>
    <string name="title_market">Рынок</string>
    <string name="title_portfolio">Портфолио</string>
    <string name="title_search">Поиск</string>
    <string name="title_settings">Настройки</string>
    <string name="title_login">Вход</string>
    <string name="title_registration">Регистрация</string>
    <string name="cryptocurrency">Криптовалюта</string>
    <string name="categories">Категории</string>
    <string name="exchanges">Биржи</string>
    <string name="derivatives">Деривативы</string>
    <string name="ten">/10</string>
    <string name="octothorp">#</string>
    <string name="dollar">$</string>
    <string name="coin">Монета</string>
    <string name="no_internet">Подключение к интернету отсутствует</string>
    <string name="data_loading_error">При загрузке данных произошла ошибка</string>
    <string name="gecko_could_not_connect">Gecko не может подключиться к интернету</string>
    <string name="repeat">Попробуйте еще раз</string>
    <string name="add_to_portfolio">добавлена в портфель</string>
    <string name="removed_from_portfolio">удалена из портфеля</string>
    <string name="portfolio_empty">Добавьте монеты, чтобы отслеживать их</string>
    <string name="home_page">Главная страница</string>
    <string name="year_established">Год создания</string>
    <string name="number_futures">Количество пар с фьючерсами</string>
    <string name="number_perpetual">Количество пар с бессрочными контрактами</string>
    <string name="market_cap">Капитализация</string>
    <string name="cap_change">Изменение капитализации за 24ч</string>
    <string name="volume">Объем 24ч</string>
    <string name="coin_search">Поиск монеты…</string>
    <string name="coin_upper_case">МОНЕТА</string>
    <string name="price_upper_case">ЦЕНА</string>
    <string name="day_upper_case">24Ч</string>
    <string name="cap_upper_case">КАПИТАЛИЗАЦИЯ</string>
    <string name="top_category_upper_case">ВЕДУЩИЕ</string>
    <string name="category_upper_case">КАТЕГОРИЯ</string>
    <string name="exchange_upper_case">БИРЖА</string>
    <string name="volume_upper_case">ОБЪЕМ 24Ч</string>
    <string name="trust_upper_case">НАДЕЖНОСТЬ</string>
    <string name="exchanges_upper_case">БИРЖИ</string>
    <string name="sum_upper_case">СУММА</string>
    <string name="defi_cap_upper_case">ДЕЦЕНТРАЛИЗОВАННЫЕ ФИНАНСЫ</string>
    <string name="total_volume_upper_case">ОБЪЕМ ЗА 24 ЧАСА</string>
    <string name="sort">Сортировать по:</string>
    <string name="rating">Рейтингу</string>
    <string name="cap">Рыночной капитализации</string>
    <string name="change">Изменению</string>
    <string name="price">Цене</string>
    <string name="email">Электронная почта</string>
    <string name="enter_email">email@example.com</string>
    <string name="password">Пароль</string>
    <string name="login">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="repeat_password">Повторить пароль</string>
    <string name="number_of_password_characters">Пароль должен содержать 6 символов. В целях безопасности рекомендуем не использовать одинаковые пароли для разных приложений и сайтов</string>
    <string name="create_an_account">Создать аккаунт</string>
    <string name="email_not_empty">Адрес электронной почты и пароль не могут быть пустыми</string>
    <string name="password_length">Пароль должен содержать 6 символов</string>
    <string name="password_does_not_match">Новый пароль и пароль подтверждения не совпадают</string>
    <string name="successful_registration">Вы успешно зарегистрированы</string>
    <string name="invalid_password">Неккоректный пароль</string>
    <string name="successful_account_login">Успешный вход в учетную запись</string>
    <string name="log_in_failed">Не удалось войти в учетную запись</string>
    <string name="close">Закрыть</string>
    <string name="language">Язык</string>
    <string name="english">English</string>
    <string name="russian">Русский</string>
    <string name="default_screen">Начальный экран по умолчанию</string>
    <string name="notifications">Уведомления о трендовых криптовалютах</string>
    <string name="for_coin">Bitcoin, Ethereum</string>
    <string name="save_or_restore_settings">Для сохранения или восстановления настроек войдите в учетную запись</string>
    <string name="welcome_back">С возвращением</string>
    <string name="subscription">Подписка</string>
    <string name="free">Free</string>
    <string name="dangerous_area">Опасная зона</string>
    <string name="delete_account">Удалить учетную запись</string>
    <string name="account_not_available">Этот аккаунт больше не буде доступен, а все сохраненные Вами данные будут удалены</string>
    <string name="save_settings">Сохранить настройки</string>
    <string name="restore_settings">Восстановить настройки</string>
    <string name="settings_saved">Настройки сохранены</string>
    <string name="settings_restored">Настройки восстановлены</string>
    <string name="account_deleted">Учетная запись пользователя удалена</string>
</resources>