<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@drawable/background_main">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_portfolio"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:fontFamily="@font/open_sans_medium"
            android:layout_gravity="center"/>
    </com.google.android.material.appbar.MaterialToolbar>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/octothorp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/octothorp"
        android:textSize="14sp"
        android:textColor="@color/gray"
        android:fontFamily="@font/open_sans_regular"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coin_upper_case"
        android:textSize="14sp"
        android:textColor="@color/gray"
        android:fontFamily="@font/open_sans_regular"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@id/octothorp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_upper_case"
        android:textSize="14sp"
        android:textColor="@color/gray"
        android:fontFamily="@font/open_sans_regular"
        android:layout_marginEnd="70dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/change"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day_upper_case"
        android:textSize="14sp"
        android:textColor="@color/gray"
        android:fontFamily="@font/open_sans_regular"
        android:layout_marginEnd="170dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/cap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cap_upper_case"
        android:textSize="14sp"
        android:textColor="@color/gray"
        android:fontFamily="@font/open_sans_regular"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@id/change"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/granite"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/octothorp"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/portfolio_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:listitem="@layout/portfolio_item"
        tools:itemCount="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/portfolioTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/portfolio_empty"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear"
        app:layout_constraintBottom_toBottomOf="parent"
        android:drawablePadding="16dp"
        app:drawableTopCompat="@drawable/gecko"/>
</androidx.constraintlayout.widget.ConstraintLayout>