<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@drawable/background_main">
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/octothorp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/octothorp"
        android:textSize="14sp"
        android:textColor="@color/gray"
        android:fontFamily="@font/open_sans_regular"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exchange_upper_case"
        android:textSize="14sp"
        android:textColor="@color/gray"
        android:fontFamily="@font/open_sans_regular"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@id/octothorp"
        app:layout_constraintTop_toTopOf="parent"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volume_upper_case"
        android:textSize="14sp"
        android:textColor="@color/gray"
        android:fontFamily="@font/open_sans_regular"
        android:layout_marginEnd="120dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/trust"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trust_upper_case"
        android:textSize="14sp"
        android:textColor="@color/gray"
        android:fontFamily="@font/open_sans_regular"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@id/volume"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/granite"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/octothorp"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/exchanges_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:listitem="@layout/exchanges_item"
        tools:itemCount="11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/no_internet_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gecko_could_not_connect"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:fontFamily="@font/open_sans_regular"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginTop="8dp"
        app:drawableTopCompat="@drawable/no_connection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/repeat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:text="@string/repeat"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:fontFamily="@font/open_sans_regular"
        android:textAllCaps="false"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:layout_marginTop="8dp"
        app:cornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/no_internet_text_view"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>