<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@drawable/background_main">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow_back_icon">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:fontFamily="@font/open_sans_medium"
            android:layout_gravity="center"/>
    </com.google.android.material.appbar.MaterialToolbar>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        android:layout_margin="16dp"
        app:contentPadding="24dp"
        app:cardBackgroundColor="@color/granite">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/email"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="16sp"
                android:textColor="@color/gray"
                android:fontFamily="@font/open_sans_regular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/email_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="email@example.com"
                android:textSize="16sp"
                android:textColor="@color/gray"
                android:fontFamily="@font/open_sans_regular"
                android:singleLine="true"
                android:maxLines="1"
                app:layout_constraintStart_toEndOf="@id/email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/email"
                app:layout_constraintBottom_toBottomOf="@id/email"
                android:gravity="end"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/first_line"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/gray"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email"/>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/subscription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subscription"
                android:textSize="16sp"
                android:textColor="@color/gray"
                android:fontFamily="@font/open_sans_regular"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/first_line"/>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="16dp"
                app:contentPaddingLeft="16dp"
                app:contentPaddingRight="16dp"
                app:contentPaddingTop="4dp"
                app:contentPaddingBottom="4dp"
                app:cardBackgroundColor="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/subscription"
                app:layout_constraintBottom_toBottomOf="@id/subscription">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/free"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/open_sans_regular"/>
            </com.google.android.material.card.MaterialCardView>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/second_line"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/gray"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/subscription"/>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/save_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_settings"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:fontFamily="@font/open_sans_regular"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/second_line"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/third_line"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/gray"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/save_text_view"/>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/restore_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restore_settings"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:fontFamily="@font/open_sans_regular"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/third_line"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dangerous_area"
        android:textSize="16sp"
        android:textColor="@color/gray"
        android:fontFamily="@font/open_sans_regular"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:contentPadding="24dp"
        app:cardBackgroundColor="@color/granite">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/delete_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_account"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:fontFamily="@font/open_sans_regular"/>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_not_available"
        android:textSize="16sp"
        android:textColor="@color/gray"
        android:fontFamily="@font/open_sans_regular"
        android:layout_margin="16dp"
        android:gravity="center"/>
</LinearLayout>