<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@drawable/background_main">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:navigationIcon="@drawable/arrow_back_icon">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_login"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:fontFamily="@font/open_sans_medium"
            android:layout_gravity="center"/>
    </com.google.android.material.appbar.MaterialToolbar>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="16sp"
                android:textColor="@color/gray"
                android:fontFamily="@font/open_sans_regular"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/box_input"
                android:hint="@string/enter_email"
                android:textColorHint="@color/gray"
                tools:text="email@example.com"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:fontFamily="@font/open_sans_regular"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="16sp"
                android:textColor="@color/gray"
                android:fontFamily="@font/open_sans_regular"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/gray"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/gray"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:background="@drawable/box_input">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:text="00000000"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/open_sans_regular"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="24dp"
                    android:background="@color/transparent"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                app:cornerRadius="8dp"
                android:text="@string/login"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:fontFamily="@font/open_sans_regular"
                android:textAllCaps="false"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:backgroundTint="@color/green"/>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/registration_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="16sp"
                android:textColor="@color/green"
                android:fontFamily="@font/open_sans_regular"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>